--- a/peterdulworth/css/alternateNav.css
+++ b/peterdulworth/css/alternateNav.css
@@ -1,9 +1,21 @@
+
+
 /*http://work.smarchal.com/twbscolor/css/6baed65ca3ceecf0f1c6dbef0*/
 
-.navbar-default {
-  background-color: #6baed6;
-  border-color: #5ca3ce;
+nav > ul > li > a,
+nav > ul > li > a:focus {
+  color: #ecf0f1;
 }
+nav > ul > li > a:hover {
+  color: #c6dbef;
+}
+
+
+
+/*.navbar-default {*/
+  /*background-color: #6baed6;*/
+  /*border-color: #5ca3ce;*/
+/*}
 .navbar-default .navbar-brand {
   color: #ecf0f1;
 }
@@ -58,4 +70,4 @@
     color: #c6dbef;
     background-color: #5ca3ce;
   }
-}
+}*/
