--- a/peterdulworth/css/index.css
+++ b/peterdulworth/css/index.css
@@ -21,6 +21,10 @@ body {
   margin: auto;
 }
 
+#cy {
+  position: absolute; width: 100vw; height: 100vh; padding: 15vh 15vw;
+}
+
 img.displayed {
   width: 250px; /*fall back width*/
   display: block;
@@ -29,49 +33,133 @@ img.displayed {
 
 img.shadowed {
     -webkit-filter: drop-shadow(12px 12px 25px rgba(0, 0, 0, 0.5));
-    filter: url("data:image/svg+xml;utf8,<svg height='0' xmlns='http://www.w3.org/2000/svg'><filter id='drop-shadow'><feGaussianBlur in='SourceAlpha' stdDeviation='4'/><feOffset dx='12' dy='12' result='offsetblur'/><feFlood flood-color='rgba(0,0,0,0.5)'/><feComposite in2='offsetblur' operator='in'/><feMerge><feMergeNode/><feMergeNode in='SourceGraphic'/></feMerge></filter></svg>#drop-shadow");
+    /*filter: url("data:image/svg+xml;utf8,<svg height='0' xmlns='http://www.w3.org/2000/svg'><filter id='drop-shadow'><feGaussianBlur in='SourceAlpha' stdDeviation='4'/><feOffset dx='12' dy='12' result='offsetblur'/><feFlood flood-color='rgba(0,0,0,0.5)'/><feComposite in2='offsetblur' operator='in'/><feMerge><feMergeNode/><feMergeNode in='SourceGraphic'/></feMerge></filter></svg>#drop-shadow");*/
     -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
     filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
 }
-
-.navbar .navbar-nav { /*border: 1px solid green;*/
+/*
+.navbar .navbar-nav {
   display: inline-block;
   float: none;
 }
 
-.navbar .navbar-collapses { /*border: 1px solid red;*/ /*box-shadow: inset 0 0 1px #0f0;*/
+.navbar .navbar-collapses {
   text-align: center;
 }
 
-.navbar-nav > li > a { /*border: 1px solid blue;*/
-  padding-top:0.6vh !important;
-  padding-bottom:0 !important;
-  height: 3vh;
+.navbar-nav > li > a {
+  padding-top: 0.6vh !important;
+  padding-bottom: 0 !important;
+  min-height: 3vh;
 }
 
 .navbar {
   min-height: 3vh !important;
+}*/
+
+nav {
+  float: left;
+  width: 100%;
+  background: #fff;
+  overflow: hidden;
+  position: relative;
+  background-color: rgb(248, 248, 248);
+  border: solid rgb(231, 231, 231) 1px;
+  margin-bottom: 20px;
+}
+
+nav > ul {
+  clear: left;
+  float: left;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: 50%;
+  text-align: center;
+}
+
+nav > ul > li {
+  display: block;
+  float: left;
+  list-style: none;
+  margin: 0; padding: 0;
+  position: relative;
+  right: 50%;
+}
+
+nav > ul > li > a,
+nav > ul > li > a:focus {
+  display: block;
+  padding: 1vmin 10px;
+  color: #777;
+  text-decoration: none;
+  line-height: 1.3em;
+}
+
+nav > ul > li > a:hover {
+  color: #333;
+}
+
+nav ul li a.active,
+nav ul li a.active:hover {
+  color:#fff;
+  background:#000;
+  font-weight:bold;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
 
 #name {
-  color: #eee;
+  /*color: #eee;*/
+  color: #abc;
   text-shadow: 2px 2px #ccc;
-  font-size: 12vw;
+  font-size: 12vmin;
   position: absolute;
   text-align: center;
-  width: 90vw; height: 20vh;
   line-height: 20vh;
+  height: 20vh; width: 90vw;
   margin: 40vh 5vw;
   padding: 0;
 }
 
+.color_1 {
+  color: #6baed6;
+  text-shadow: 2px 2px #9ecae1;
+}
+
+.color_2 {
+ /* color: #9ecae1;
+  text-shadow: 2px 2px #c6dbef;*/
+  color: #c6dbef;
+  text-shadow: 2px 2px #6baed6;
+}
+
+.color_3 {
+  color: #c6dbef;
+  text-shadow: 2px 2px #6baed6;
+}
+
 #fireworks { /*border: red 1px dashed;*/
   color: #e8e8e8;
-  /*text-shadow: 1px 1px #ccc;*/
   font-size: 3vmin;
   float:right;
   text-align: center;
-  width: 20vmin; height: 6vmin;
+  width: 30vmin; height: 6vmin;
   line-height: 6vmin;
   padding: 0;
 }
@@ -88,7 +176,7 @@ img.shadowed {
   font-size: 4vw;
   width: 8vw; height: 16vh;
   line-height: 16vh;
-  margin: 79vh 46vw 5vh 46vw;
+  margin: 83vh 46vw 1vh 46vw;
   padding: 0;
 }
 
@@ -126,6 +214,7 @@ path {
   margin-bottom: 20px;
   color: white;
   background-color:#c6dbef;
+  /*background-color: #61bffc;*/
   text-align: center;
   font-size: 8vmin;
 }
@@ -170,6 +259,7 @@ path {
 }
 
 .card-text {
+  font-size: 2vmin;
   display: none;
   text-align: center;
 }
