--- a/peterdulworth/views/errormessages/404.html
+++ b/peterdulworth/views/errormessages/404.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="../../peterdulworth/css/404.css">
   </head>
   <body>
-    <a href="../index.html" id="back" style="text-align:center; position:absolute; margin-left:45%; width:10%; margin-top:3vw; z-index:9000;"><div class="glyphicon glyphicon-level-up"></div> Back to Safety</a>
+    <a href="../index.html" id="back" style="text-align:center; position:absolute; margin-left:45%; width:10%; margin-top:3vw; z-index:9000;"><div class="glyphicon glyphicon-level-up"></div>Home</a>
     <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
       <div class="navbar-collapses">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
-          <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
